# NgUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/Game/: Background.cpp  Background.hpp  Game.cpp  Game.hpp  Object2D.cpp  Object2D.hpp  Player.cpp  Player.hpp  Resource.hpp  SceneNode.cpp  SceneNode.hpp
src/Graphic/: GLObject.cpp  GLObject.hpp  OpenGL.cpp  OpenGL.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Transform.cpp  Transform.hpp  VerticeBuffer.cpp  VerticeBuffer.hpp  Window.cpp  Window.hpp
src/Utility/: Clock.cpp  Clock.hpp  Image.cpp  Image.hpp  ImageLoader.cpp  ImageLoader.hpp  Sprite.cpp  Sprite.hpp  TextureManager.cpp  TextureManager.hpp  Transform.cpp  Transform.hpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
